Update calls to textarea with the id option

--- a/app/components/admin/editions/fact_checking_tab_component.html.erb
+++ b/app/components/admin/editions/fact_checking_tab_component.html.erb
@@ -49,7 +49,7 @@
           bold: true,
         },
         name: "fact_check_request[instructions]",
-        id: "fact_check_request_instructions",
+        textarea_id: "fact_check_request_instructions",
       } %>
 
       <%= render "govuk_publishing_components/components/button", {
