--- a/app/views/admin/calls_for_evidence/_form.html.erb
+++ b/app/views/admin/calls_for_evidence/_form.html.erb
@@ -77,7 +77,7 @@
             heading_size: "m",
           },
           name: "edition[call_for_evidence_participation_attributes][postal_address]",
-          id: "edition_call_for_evidence_participation_postal_address",
+          textarea_id: "edition_call_for_evidence_participation_postal_address",
           value: call_for_evidence_participation.postal_address,
           error_items: errors_for(call_for_evidence_participation.errors, :postal_address),
           rows: 4,
