--- a/app/views/admin/consultations/_form.html.erb
+++ b/app/views/admin/consultations/_form.html.erb
@@ -76,7 +76,7 @@
             heading_size: "m",
           },
           name: "edition[consultation_participation_attributes][postal_address]",
-          id: "edition_consultation_participation_postal_address",
+          textarea_id: "edition_consultation_participation_postal_address",
           value: consultation_participation.postal_address,
           error_items: errors_for(consultation_participation.errors, :postal_address),
           rows: 4,
