--- a/app/views/admin/contact_translations/edit.html.erb
+++ b/app/views/admin/contact_translations/edit.html.erb
@@ -30,7 +30,7 @@
           text: "Comments",
           },
           name: "contact[comments]",
-          id: "contact_comments",
+          textarea_id: "contact_comments",
           value: @translated_contact.comments,
           error_items: errors_for(form.object.errors, :comments),
           right_to_left: @translated_contact.translation_locale.rtl?,
