--- a/app/views/admin/contacts/_form.html.erb
+++ b/app/views/admin/contacts/_form.html.erb
@@ -22,7 +22,7 @@
           heading_size: "l",
         },
         name: "contact[comments]",
-        id: "contact_comments",
+        textarea_id: "contact_comments",
         hint: "Optional instructions for this contact",
         value: contact_form.object.comments,
         error_items: errors_for(contact_form.object.errors, :comments),
