--- a/app/views/admin/edition_access_limited/edit.html.erb
+++ b/app/views/admin/edition_access_limited/edit.html.erb
@@ -25,7 +25,7 @@
           heading_size: "l",
         },
         name: "edition[editorial_remark]",
-        id: "edition_editorial_remark",
+        textarea_id: "edition_editorial_remark",
         error_items: errors_for(@edition.errors, :editorial_remark),
         hint: "Please explain why this change is required",
         rows: 20,
