--- a/app/views/admin/edition_images/edit.html.erb
+++ b/app/views/admin/edition_images/edit.html.erb
@@ -15,7 +15,7 @@
           heading_size: "l",
         },
         name: "image[caption]",
-        id: "image_caption",
+        textarea_id: "image_caption",
         value: image.caption,
         rows: 2,
         hint: raw("Name a person in a photo or add image credit. <a class='govuk-link' href='https://www.gov.uk/guidance/content-design/images'>Read the image copyright standards</a>. The text appears next to the image."),
@@ -35,7 +35,7 @@
             heading_size: "l",
           },
           name: "image[alt_text]",
-          id: "image_alt_text",
+          textarea_id: "image_alt_text",
           value: image.alt_text,
           rows: 5,
           hint: tag.p("You should write the alt text description in the body copy below the image so it’s available to everyone.", class: "govuk-!-margin-bottom-0 govuk-!-margin-top-0"),
