--- a/app/views/admin/edition_translations/edit.html.erb
+++ b/app/views/admin/edition_translations/edit.html.erb
@@ -35,7 +35,7 @@
             text: "Translated summary#{' (required)' unless @edition.is_a?(CorporateInformationPage)}",
           },
           name: "edition[summary]",
-          id: "edition_summary",
+          textarea_id: "edition_summary",
           value: @translated_edition.summary,
           rows: 2,
           error_items: errors_for(form.object.errors, :summary),
@@ -54,7 +54,7 @@
             text: "Translated body (required)",
           },
           name: "edition[body]",
-          id: "edition_body",
+          textarea_id: "edition_body",
           value: @translated_edition.body,
           rows: 20,
           error_items: errors_for(form.object.errors, :body),
