--- a/app/views/admin/editions/_change_notes.html.erb
+++ b/app/views/admin/editions/_change_notes.html.erb
@@ -34,7 +34,7 @@
             bold: true,
           },
           name: "edition[change_note]",
-          id: "edition_change_note",
+          textarea_id: "edition_change_note",
           error_message: errors_for_input(edition.errors, :change_note),
           value: edition.change_note,
           hint: (tag.p('Tell users what has changed, where and why. Write in full sentences, leading with the most important words. For example, "College A has been removed from the registered sponsors list because its licence has been suspended."', class: "govuk-!-margin-bottom-0 govuk-!-margin-top-0") +
