--- a/app/views/admin/editorial_remarks/new.html.erb
+++ b/app/views/admin/editorial_remarks/new.html.erb
@@ -17,7 +17,7 @@
           bold: true,
         },
         name: "editorial_remark[body]",
-        id: "editorial_remark_body",
+        textarea_id: "editorial_remark_body",
         error_items: errors_for(@editorial_remark.errors, :body),
         rows: 20,
       } %>
