--- a/app/views/admin/fact_check_requests/edit.html.erb
+++ b/app/views/admin/fact_check_requests/edit.html.erb
@@ -39,7 +39,7 @@
           bold: true,
         },
         name: "fact_check_request[comments]",
-        id: "fact_check_request_comments",
+        textarea_id: "fact_check_request_comments",
         rows: 20,
       } %>
 
