--- a/app/views/admin/fatality_notices/_casualty_fields.html.erb
+++ b/app/views/admin/fatality_notices/_casualty_fields.html.erb
@@ -6,7 +6,7 @@
     },
     value: fatality_form.object.personal_details,
     name: "edition[fatality_notice_casualties_attributes][#{index}][personal_details]",
-    id: "edition_fatality_notice_casualties_#{index}_personal_details",
+    textarea_id: "edition_fatality_notice_casualties_#{index}_personal_details",
     rows: 2,
   } %>
 <% end %>
