--- a/app/views/admin/fatality_notices/_form.html.erb
+++ b/app/views/admin/fatality_notices/_form.html.erb
@@ -27,7 +27,7 @@
       },
       value: edition.roll_call_introduction,
       name: "edition[roll_call_introduction]",
-      id: "edition_roll_call_introduction",
+      textarea_id: "edition_roll_call_introduction",
       error_items: errors_for(edition.errors, :roll_call_introduction),
       rows: 2,
     } %>
