--- a/app/views/admin/historical_accounts/_form.html.erb
+++ b/app/views/admin/historical_accounts/_form.html.erb
@@ -75,7 +75,7 @@
           text: "Major acts",
           heading_size: "l",
         },
-        id: "historical_account_major_acts",
+        textarea_id: "historical_account_major_acts",
         name: "historical_account[major_acts]",
         value: historical_account.major_acts,
         rows: 4,
@@ -87,7 +87,7 @@
           text: "Interesting facts",
           heading_size: "l",
         },
-        id: "historical_account_interesting_facts",
+        textarea_id: "historical_account_interesting_facts",
         name: "historical_account[interesting_facts]",
         value: historical_account.interesting_facts,
         rows: 4,
