--- a/app/views/admin/offsite_links/_form.html.erb
+++ b/app/views/admin/offsite_links/_form.html.erb
@@ -15,7 +15,7 @@
       text: "Summary (required)",
       heading_size: "l",
     },
-    id: "offsite_link_summary",
+    textarea_id: "offsite_link_summary",
     name: "offsite_link[summary]",
     value: offsite_link.summary,
     rows: 3,
