--- a/app/views/admin/organisation_translations/edit.html.erb
+++ b/app/views/admin/organisation_translations/edit.html.erb
@@ -48,7 +48,7 @@
             text: "Logo formatted name (required)",
           },
           name: "organisation[logo_formatted_name]",
-          id: "organisation_logo_formatted_name",
+          textarea_id: "organisation_logo_formatted_name",
           value: @translated_organisation.logo_formatted_name,
           rows: 4,
           error_items: errors_for(@translated_organisation.errors, :logo_formatted_name),
