--- a/app/views/admin/organisations/_form.html.erb
+++ b/app/views/admin/organisations/_form.html.erb
@@ -31,7 +31,7 @@
       heading_size: "l",
     },
     name: "organisation[logo_formatted_name]",
-    id: "organisation_logo_formatted_name",
+    textarea_id: "organisation_logo_formatted_name",
     value: organisation.logo_formatted_name,
     rows: 4,
     error_items: errors_for(organisation.errors, :logo_formatted_name),
