--- a/app/views/admin/person_translations/edit.html.erb
+++ b/app/views/admin/person_translations/edit.html.erb
@@ -12,7 +12,7 @@
             text: "Biography",
           },
           name: "person[biography]",
-          id: "person_biography",
+          textarea_id: "person_biography",
           value: @translated_person.biography,
           rows: 20,
           error_items: errors_for(@translated_person.errors, :biography),
