--- a/app/views/admin/promotional_feature_items/_form_fields.html.erb
+++ b/app/views/admin/promotional_feature_items/_form_fields.html.erb
@@ -26,7 +26,7 @@
     heading_size: heading_size,
   },
   name: "#{name}[summary]",
-  id: "#{id}_summary",
+  textarea_id: "#{id}_summary",
   value: promotional_feature_item.summary,
   error_items: errors_for(promotional_feature_item.errors, :summary),
   rows: 4,
