--- a/app/views/admin/role_translations/edit.html.erb
+++ b/app/views/admin/role_translations/edit.html.erb
@@ -30,7 +30,7 @@
             text: "Responsibilities",
           },
           name: "role[responsibilities]",
-          id: "role_responsibilities",
+          textarea_id: "role_responsibilities",
           value: @translated_role.responsibilities,
           rows: 20,
           error_items: errors_for(form.object.errors, :responsibilities),
