--- a/app/views/admin/sitewide_settings/_form.html.erb
+++ b/app/views/admin/sitewide_settings/_form.html.erb
@@ -30,7 +30,7 @@
                    text: "Can you provide more detail in Govspeak?",
                  },
                  name: "sitewide_setting[govspeak]",
-                 id: "sitewide_setting_govspeak",
+                 textarea_id: "sitewide_setting_govspeak",
                  error_message: errors_for_input(sitewide_setting.errors, :govspeak),
                  hint: "Please check this is valid govspeak.",
                  value: sitewide_setting.govspeak %>
