--- a/app/views/admin/statistics_announcement_date_changes/new.html.erb
+++ b/app/views/admin/statistics_announcement_date_changes/new.html.erb
@@ -87,7 +87,7 @@
             text: "Public change note (required)",
             heading_size: "l",
           },
-          id: "statistics_announcement_date_change_change_note",
+          textarea_id: "statistics_announcement_date_change_change_note",
           name: "statistics_announcement_date_change[change_note]",
           value: @statistics_announcement_date_change.change_note,
           error_message: errors_for_input(@statistics_announcement_date_change.errors, :change_note),
