--- a/app/views/admin/statistics_announcements/_cancel_form.html.erb
+++ b/app/views/admin/statistics_announcements/_cancel_form.html.erb
@@ -10,7 +10,7 @@
       heading_size: "m",
     },
     value: statistics_announcement.cancellation_reason,
-    id: "statistics_announcement_cancellation_reason",
+    textarea_id: "statistics_announcement_cancellation_reason",
     name: "statistics_announcement[cancellation_reason]",
     rows: 5,
     error_message: errors_for_input(statistics_announcement.errors, :cancellation_reason),
