--- a/app/views/admin/statistics_announcements/_form.html.erb
+++ b/app/views/admin/statistics_announcements/_form.html.erb
@@ -45,7 +45,7 @@
       heading_size: "l",
     },
     value: statistics_announcement.summary,
-    id: "statistics_announcement_summary",
+    textarea_id: "statistics_announcement_summary",
     name: "statistics_announcement[summary]",
     rows: 5,
     error_message: errors_for_input(statistics_announcement.errors, :summary),
