--- a/app/views/admin/topical_event_about_pages/_form.html.erb
+++ b/app/views/admin/topical_event_about_pages/_form.html.erb
@@ -31,7 +31,7 @@
     value: topical_event_about_page.summary,
     heading_size: "l",
     name: "topical_event_about_page[summary]",
-    id: "topical_event_about_page_summary",
+    textarea_id: "topical_event_about_page_summary",
     error_items: errors_for(topical_event_about_page.errors, :summary),
   } %>
   <%= render "components/govspeak_editor", {
