--- a/app/views/admin/world_location_news_translations/edit.html.erb
+++ b/app/views/admin/world_location_news_translations/edit.html.erb
@@ -56,7 +56,7 @@
               heading_size: "l",
             },
             name: "world_location_news[mission_statement]",
-            id: "world_location_news_mission_statement",
+            textarea_id: "world_location_news_mission_statement",
             value: @translated_world_location_news.mission_statement,
             rows: 10,
             right_to_left: @translated_world_location_news.translation_locale.rtl?,
