--- a/app/views/admin/worldwide_office_translations/edit.html.erb
+++ b/app/views/admin/worldwide_office_translations/edit.html.erb
@@ -31,7 +31,7 @@
             heading_size: "l",
           },
           name: "contact[comments]",
-          id: "contact_comments",
+          textarea_id: "contact_comments",
           value: @translated_contact.comments,
           rows: 10,
           error_items: errors_for(@translated_contact.errors, :comments),
