--- a/app/views/admin/worldwide_offices/_form.html.erb
+++ b/app/views/admin/worldwide_offices/_form.html.erb
@@ -72,7 +72,7 @@
       heading_size: "l",
     },
     name: "worldwide_office[contact_attributes][comments]",
-    id: "worldwide_office_contact_attributes_comments",
+    textarea_id: "worldwide_office_contact_attributes_comments",
     value: office_form.object.comments,
     hint: "Optional instructions for this contact",
   } %>
