--- a/app/views/admin/worldwide_organisation_page_translations/edit.html.erb
+++ b/app/views/admin/worldwide_organisation_page_translations/edit.html.erb
@@ -13,7 +13,7 @@
             text: "Translated summary (required)",
           },
           name: "page[summary]",
-          id: "page_summary",
+          textarea_id: "page_summary",
           value: @translated_page.summary,
           rows: 2,
           error_items: errors_for(form.object.errors, :summary),
@@ -32,7 +32,7 @@
             text: "Translated body (required)",
           },
           name: "page[body]",
-          id: "page_body",
+          textarea_id: "page_body",
           value: @translated_page.body,
           rows: 20,
           error_items: errors_for(form.object.errors, :body),
