--- a/app/views/admin/worldwide_organisations/_form.html.erb
+++ b/app/views/admin/worldwide_organisations/_form.html.erb
@@ -5,7 +5,7 @@
       heading_size: "l",
     },
     name: "edition[logo_formatted_name]",
-    id: "edition_logo_formatted_name",
+    textarea_id: "edition_logo_formatted_name",
     value: edition.logo_formatted_name,
     error_items: errors_for(edition.errors, :logo_formatted_name),
     rows: 4,
