--- a/app/views/components/_govspeak_editor.html.erb
+++ b/app/views/components/_govspeak_editor.html.erb
@@ -78,7 +78,7 @@
   <div class="app-c-govspeak-editor__textarea">
     <%= render "govuk_publishing_components/components/textarea", {
       name: name,
-      id: id,
+      textarea_id: id,
       rows: rows,
       value: value,
       error_items: error_items,
