--- a/app/views/admin/policy_groups/_form.html.erb
+++ b/app/views/admin/policy_groups/_form.html.erb
@@ -27,7 +27,7 @@
       heading_size: "l",
     },
     name: "policy_group[summary]",
-    id: "policy_group_summary",
+    textarea_id: "policy_group_summary",
     value: policy_group.summary,
     error_items: errors_for(policy_group.errors, :summary),
     rows: 4,
