--- a/app/views/shared/_republishing_form.html.erb
+++ b/app/views/shared/_republishing_form.html.erb
@@ -7,7 +7,7 @@
         heading_size: "m",
       },
       name: "reason",
-      id: "republishing_event_reason",
+      textarea_id: "republishing_event_reason",
       error_items: errors_for(republishing_event.errors, :reason),
     }) %>
 
