Change button text based on scheduling state
This adds a `is_scheduling?` helper method to determine whether or
not a user is going to schedule the block or not.

I’ve also updated some of the feature tests so we can click on the
appropriate button depending on the journey.

--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/review.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/review.html.erb
@@ -48,9 +48,8 @@
       <div class="govuk-button-group govuk-!-margin-bottom-6">
         <div>
           <%= render "govuk_publishing_components/components/button", {
-            text: "Confirm",
+            text: is_scheduling? ? "Schedule" : "Publish",
             name: "confirm",
-            value: "Confirm",
             type: "submit",
           } %>
       <% end %>
