use the cancel and delete button component
and delete deprecated partial

--- a/lib/engines/content_block_manager/app/components/content_block_manager/shared/schedule_publishing_component.html.erb
+++ b/lib/engines/content_block_manager/app/components/content_block_manager/shared/schedule_publishing_component.html.erb
@@ -105,13 +105,12 @@
           secondary_solid: true,
         } %>
       <% else %>
-        <%= render partial: "content_block_manager/content_block/shared/cancel_delete_button",
-                   locals: {
-                     url: helpers.content_block_manager.content_block_manager_content_block_edition_path(
-                       content_block_edition,
-                       redirect_path: helpers.content_block_manager.content_block_manager_content_block_document_path(content_block_edition.document),
-                       ),
-                   } %>
+        <%= render ContentBlockManager::Shared::CancelAndDeleteButtonComponent.new(url: helpers.content_block_manager.
+              content_block_manager_content_block_edition_path(
+                content_block_edition, redirect_path:
+                  helpers.content_block_manager.content_block_manager_content_block_document_path(content_block_edition.document)
+              ),
+            ) %>
       <% end %>
     </div>
     </div>
