--- a/app/views/layouts/design_system.html.erb
+++ b/app/views/layouts/design_system.html.erb
@@ -54,12 +54,16 @@
       <% if yield(:title).present? %>
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-<%= column_width %>">
-            <%= render "govuk_publishing_components/components/title", {
-              context: yield(:context),
-              title: yield(:title),
-              margin_top: 0,
-              margin_bottom: yield(:title_margin_bottom).present? ? yield(:title_margin_bottom).to_i : nil,
-            } %>
+            <%
+              heading_options = {
+                context: yield(:context),
+                text: yield(:title),
+                heading_level: 1,
+                font_size: "xl",
+              }
+              heading_options[:margin_bottom] = yield(:title_margin_bottom).to_i if yield(:title_margin_bottom).present?
+            %>
+            <%= render "govuk_publishing_components/components/heading", heading_options %>
           </div>
 
           <% if yield(:page_full_width).blank? %>
