Allow an internal note to be set

--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/review.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/review.html.erb
@@ -2,7 +2,7 @@
 <% content_for :title, "Review #{@content_block_edition.block_type.humanize.downcase}" %>
 <% content_for :back_link do %>
   <%= render "govuk_publishing_components/components/back_link", {
-    href: content_block_manager.content_block_manager_content_block_documents_path,
+    href: @back_path,
   } %>
 <% end %>
 
