Refactor the workflow steps
This tidies up some of the logic and puts the show/update methods in
their own concerns, so it’s clear what they relate to. Also, we 404 if
an unknown step is provided.

I’ve also removed the `*_STEPS` constants, as it wasn’t clear what value
they were offering, especially as now we 404 when an unknown step
is provided.

--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/review_links.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/review_links.html.erb
@@ -42,7 +42,7 @@
           <%= form_with(
                 url: content_block_manager.content_block_manager_content_block_workflow_path(
                   edition_id: @content_block_edition.id,
-                  step: ContentBlockManager::ContentBlock::Editions::WorkflowController::UPDATE_BLOCK_STEPS[:review_links],
+                  step: :review_links,
                 ),
                 method: :put,
               ) do %>
