--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/schedule_publishing.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/schedule_publishing.html.erb
@@ -5,11 +5,11 @@
       context:,
       back_link: content_block_manager.content_block_manager_content_block_workflow_path(
         @content_block_edition,
-        step: ContentBlockManager::ContentBlock::Editions::WorkflowController::UPDATE_BLOCK_STEPS[:review_links],
+        step: :review_links,
       ),
       form_url: content_block_manager.content_block_manager_content_block_workflow_path(
         @content_block_edition,
-        step: ContentBlockManager::ContentBlock::Editions::WorkflowController::UPDATE_BLOCK_STEPS[:schedule_publishing],
+        step: :schedule_publishing,
       ),
       is_rescheduling: false,
     )
