wip add table to document timeline
still to do:
* accordion to show/hide table
* rename column headings

--- a/lib/engines/content_block_manager/app/assets/stylesheets/content_block_manager/components/_timeline-component.scss
+++ b/lib/engines/content_block_manager/app/assets/stylesheets/content_block_manager/components/_timeline-component.scss
@@ -70,3 +70,13 @@
   display: inline-block !important;
   margin-bottom: 10px !important;
 }
+
+.timeline__diff-table {
+  margin-top: govuk-spacing(1);
+
+  .govuk-details__text {
+    margin-top: govuk-spacing(1);
+    border: none;
+    padding-left: 0;
+  }
+}
