Add a `back_path` helper
This saves us from having to set it each time in our controller methods.
It relies on the actions being in order, and returns the previous step
for each action, unless the edition is brand new.

--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/internal_note.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/internal_note.html.erb
@@ -3,7 +3,7 @@
 <% content_for :title_margin_bottom, 4 %>
 <% content_for :back_link do %>
   <%= render "govuk_publishing_components/components/back_link", {
-    href: @back_path,
+    href: back_path(@content_block_edition, "internal_note"),
   } %>
 <% end %>
 
